<resources>
    <string name="app_name">TravelPlatform</string>
    <string name="title_home">일정</string>
    <string name="title_dashboard">저장지역</string>
    <string name="title_notifications">마이페이지</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_plan">여행 경로</string>


    <string name="prompt_id">아이디</string>
    <string name="prompt_password">비밀번호</string>
    <string name="prompt_password_check">비밀번호 확인</string>
    <string name="prompt_phone">핸드폰번호, (-) 은 제외하고 입력해주세요.</string>
    <string name="action_sign_in">로그인</string>
    <string name="action_register">회원가입</string>
    <string name="action_to_plan">일정 만들기!</string>
    <string name="action_to_next">다음</string>
    <string name="desription_register">아직 회원이 아니신가요? </string>
    <string name="action_sign_in_short">로그인</string>
    <string name="action_register_short">회원가입</string>

    <string name="ok">확인</string>
    <string name="delete">삭제</string>

    <string name="prompt_add_location">장소 추가</string>

    <string name="welcome">"환영합니다. 님!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">비밀번호는 6자 이상이어야 합니다.</string>
    <string name="invalid_password_check">입력한 비밀번호가 다릅니다.</string>
    <string name="invalid_phonenum">\'-\'를 제외한 휴대폰 번호 11자리를 입력해주세요</string>
    <string name="login_failed">아이디나 비밀번호가 맞지 않습니다.</string>
    <string name="id_check">중복된 아이디가 있습니다.</string>

    <string name="intro_register">반가워요! \n(어플이름)은 간단한 정보만 입력하면 돼요.</string>
    <string name="back_register">로그인 화면으로 돌아가기</string>
    <string name="welcome_register">회원 가입이 완료되었어요!\n지금 부산 여행 일정을 만들어볼까요?</string>
    <string name="just_register">괜찮아요. 천천히 둘러볼게요.</string>

    <string name="waiting_please">개발중입니다..!</string>
    <string name="delete_please">삭제하시겠습니까?</string>

    <string name="intro_home">안녕하세요, ㅇㅇㅇ님!\n걷기 좋은 청사포 다릿돌전망대 어때요?</string>
    <string name="subtitle_first_home">ㅇㅇㅇ님을 위한 추천 경로</string>

    <string name="search_hint">검색어를 입력해주세요…</string>

    <string name="who_type">여행을 떠나기 전\n간단한 취향 조사를 시작할게요.\n누구와 여행을 떠나시나요?</string>
    <string name="style_type">좋은 답변이에요!\n어떤 스타일의 여행을 계획하고 계신가요?</string>ㅁㄴ
    <string name="how_long_type">마지막 질문이에요.\n몇 박 며칠로 계획하고 계신가요?</string>
    <string name="cancel_type">나중에 할게요.</string>

    <string name="save">저장하기</string>
    <string name="unsave">저장해제</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>