<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingBottom="@dimen/activity_vertical_margin"
            app:layout_constraintTop_toTopOf="parent">

            <View
                android:layout_width="146dp"
                android:layout_height="3dp"
                android:background="@color/sub_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/intro_register"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/background_corner_round"
                android:fontFamily="@font/pretendard_regular"
                android:hint="@string/prompt_id"
                android:inputType="textUri"
                android:paddingStart="18dp"
                android:selectAllOnFocus="true"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_intro" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_corner_round"
                android:fontFamily="@font/pretendard_regular"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:paddingStart="18dp"
                android:selectAllOnFocus="true"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/username" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/phonenum"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/background_corner_round"
                android:fontFamily="@font/pretendard_regular"
                android:hint="@string/prompt_phone"
                android:imeActionLabel="@string/action_register_short"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="11"
                android:paddingStart="18dp"
                android:selectAllOnFocus="true"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password" />


            <Button
                android:id="@+id/register"
                android:layout_width="match_parent"
                android:layout_height="62dp"
                android:layout_gravity="start"
                android:layout_marginTop="33dp"
                android:enabled="false"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/action_register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/phonenum" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="96dp"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/back_register"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/register" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>