<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="60dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_top"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="30dp"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_back"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_close"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_close"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingTop="42dp"
            app:layout_constraintBottom_toTopOf="@id/cl_bottom"
            app:layout_constraintTop_toBottomOf="@id/cl_top">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_who"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_who"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_semi_bold"
                    android:paddingHorizontal="@dimen/content_padding"
                    android:text="@string/who_type"
                    android:textColor="@color/title_color"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_who"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="26dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_who"
                    tools:itemCount="8"
                    tools:listitem="@layout/item_condition" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_style"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_style"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_semi_bold"
                    android:paddingHorizontal="@dimen/content_padding"
                    android:text="@string/style_type"
                    android:textColor="@color/title_color"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_style"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginTop="26dp"
                    android:orientation="horizontal"
                    android:paddingHorizontal="17dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_style"
                    tools:itemCount="8"
                    tools:listitem="@layout/item_condition" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_howlong"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_howlong"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_semi_bold"
                    android:paddingHorizontal="@dimen/content_padding"
                    android:text="@string/how_long_type"
                    android:textColor="@color/title_color"
                    android:textSize="18sp"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cl_from"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="60dp"
                    android:layout_marginHorizontal="25dp"
                    app:layout_constraintTop_toBottomOf="@id/tv_howlong">

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/sp_month"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/sp_date"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatSpinner
                        android:id="@+id/sp_date"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="12dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/sp_month"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_from"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="36dp"
                    android:text="부터"
                    android:fontFamily="@font/pretendard_regular"
                    android:textColor="@color/hint_color"
                    android:textSize="14dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/cl_from"/>
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/sp_night"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/cl_from"
                    app:layout_constraintEnd_toEndOf="@id/cl_from"
                    app:layout_constraintTop_toBottomOf="@id/tv_from"
                    android:layout_marginTop="34dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_waiting"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_waiting"
                    android:layout_width="122dp"
                    android:layout_height="122dp"
                    android:background="@drawable/anim_recommend"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/content_padding"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@drawable/btn_color"
                android:enabled="true"
                android:fontFamily="@font/pretendard_regular"
                android:text="@string/action_to_next"
                android:textColor="@color/white"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="79dp"
                android:fontFamily="@font/pretendard_semi_bold"
                android:text="@string/cancel_type"
                android:textColor="@color/content_color"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/next" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>